--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+
+.welcome {
+    position: absolute;
+    top: 50px;
+}
+
+body {
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(100,130,159,1) 0%, rgba(103,56,96,1) 90% );
+}
 
